# algorithms-and-data-structures

lab2_matrix/additional/: coo.h  line_matrix.h  main.cpp  matrix.h
lab3_postfix/include/: postfix.h
lab3_postfix/test/: test_tpostfix.cpp
lab4_polynom/include/: list.h  node.h  polynom.h
lab4_polynom/samples/: main.cpp
lab4_polynom/test/: CMakeLists.txt  test_list.cpp  test_polynom.cpp
lab5_parser/: CMakeLists.txt  calc.g4  input_file.txt  main.cpp
lab5_parser/antlr/lib/: antlr4-runtime.lib
lab5_parser/include/: calcBaseListener.h  calcLexer.h  calcListener.h  calcParser.h  calculatorInterpeter.h  polynom.h
lab5_parser/src/: calcLexer.cpp  calcParser.cpp
lab6_tables/: CMakeLists.txt
lab6_tables/include/: TAVLTree.h  THashTable.h  TOrderedTable.h  TUnorderedTable.h  polynom.h
lab6_tables/samples/: main.cpp
